kubernetes/frontendservice/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendservice
  labels:
    app: frontendservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontendservice
  template:
    metadata:
      labels:
        app: frontendservice
    spec:
      serviceAccountName: google-boutique
      containers:
        - name: frontendservice
          image: ashwiniethiraj/frontendservice:v1
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ecr-secret
