kubernetes/frontendservice/service.yml
apiVersion: v1
kind: Service
metadata:
 name: frontendservice
 labels: 
   app: frontendservice

spec:
 type: LoadBalancer
 ports:
  - name: http
    port: 80
    targetPort: 8080
 selector: 
   app: frontendservice
